# chatbot-react-fastapi-app

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  socketio_handler.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatList.jsx  ChatWindow.jsx  Login.jsx  MessageInput.jsx  Register.jsx
frontend/src/services/: api.js  socket.js
